# onepassword-cli

./: .gitignore  Cargo.toml  README.md
examples/: get_account_info.rs
src/: error.rs  lib.rs  output.rs  prelude.rs  tests.rs
