[package]
name = "rust1p"
version = "0.1.0"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-test="0.3"
chrono= "0.4"
thiserror = "1.0"
serde={version="1.0",features = ["derive"]}
serde_json="1.0"