[package]
name = "rust1p"
version = "0.1.0"
authors = ["sinyo-matu <seelerei0130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.0.0",features=["process","io-util","io-std"]}
chrono= "0.4"
serde={version="1.0",features = ["derive"]}
serde_json="1.0"
async-trait = "0.1.48"

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.3.0", features = ["full"] }
